--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ install:
 - tar xfv 1.0.2.tar.gz
 - cd gibson-1.0.2
 - cmake . && make
-- ./gibson --address 127.0.0.1 --port 10128 --logfile ./g.log --pidfile pid1 -c ./debian/etc/gibson/gibson.conf
+- ./gibson -c ./debian/etc/gibson/gibson.conf --logfile /tmp/test_gibson.log --unix_socket /tmp/gibson.sock
+- sleep 3
 - cd ../
 
 script:
