--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ python:
     - "3.3"
     - "3.4"
 
+env:
+    - PYTHONASYNCIODEBUG=1
+    - PYTHONASYNCIODEBUG=0
+
 install:
     - pip install pyflakes
     - pip install pep8
