--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ python:
     - 3.4
 
 install:
-    - pip install pyflakes
-    - pip install pep8
-    - pip install -e .
+    - pip install flake8
+    - pip install nose
+    - pip install .
     - wget https://github.com/evilsocket/gibson/archive/1.0.2.tar.gz
     - tar xfv 1.0.2.tar.gz
     - cd gibson-1.0.2
