--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
     - pip install flake8
     - pip install nose
     - pip install .
-    - wget https://github.com/evilsocket/gibson/archive/1.1.0.tar.gz
+    - wget https://github.com/evilsocket/gibson/archive/$GB.tar.gz
     - tar xfv 1.1.0.tar.gz
     - cd gibson-1.1.0
     - cmake . && make
@@ -25,6 +25,10 @@ script:
   echo "Running ${example}";
   python3 ${example} || exit 1;
   done;
+
+env:
+- GB=1.1.0
+- GB=1.2.0
 
 after_success:
     - coveralls
